# neo4j-mcp

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.oneiric_cache/: runtime_health.json
neo4j_mcp/: __init__.py  __main__.py  cli.py  cli.py.backup.json  client.py  config.py  models.py  server.py
neo4j_mcp/tools/: __init__.py  graph_tools.py
settings/: neo4j.yaml
